--- a/index.html
+++ b/index.html
@@ -8,17 +8,27 @@
 </head>
 <body>
     <header>
-        <h1>VLM-R1 Blog</h1>
-        <p>Official blog for the VLM-R1 project - Solving Visual Understanding with Reinforced VLMs</p>
+        <div class="header-container">
+            <img src="images/OmAI-logo.png" alt="OmAI Lab Logo" class="lab-logo">
+            <div class="header-text">
+                <h1>VLM-R1 Blog</h1>
+                <p>Official blog for the VLM-R1 project - Solving Visual Understanding with Reinforced VLMs</p>
+            </div>
+        </div>
     </header>
 
     <main>
         <ul class="blog-list">
             <li>
-                <span class="date">March 20, 2025</span>
-                <h2><a href="2025_03_20.html">Improving Object Detection through Reinforcement Learning with VLM-R1</a></h2>
-                <p>A detailed exploration of how reinforcement learning enhances object detection performance compared to supervised fine-tuning in vision-language models.</p>
+                <img src="images/coco_overall.v3.png" alt="COCO results" class="blog-image">
+                <div class="blog-content">
+                    <span class="date">March 20, 2025</span>
+                    <h2><a href="2025_03_20.html">Improving Object Detection through Reinforcement Learning with VLM-R1</a></h2>
+                    <p>A detailed exploration of how reinforcement learning enhances object detection performance compared to supervised fine-tuning in vision-language models.</p>
+                    <a href="2025_03_20.html" class="read-more">Read more →</a>
+                </div>
             </li>
+            <!-- Additional blog posts would go here -->
         </ul>
     </main>
 </body>
