--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img src="images/OmAI-logo.png" alt="OmAI Lab Logo" class="lab-logo">
+            <img src="images/OmAI-logo.v2.png" alt="OmAI Lab Logo" class="lab-logo">
             <div class="header-text">
                 <h1>VLM-R1 Blog</h1>
                 <p>Official blog for the VLM-R1 project - Solving Visual Understanding with Reinforced VLMs</p>
