--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <main>
         <ul class="blog-list">
             <li>
+                <img src="images/3b-accurancy.png" alt="3B vs 7B Model Comparison" class="blog-image">
+                <div class="blog-content">
+                    <span class="date">March 24, 2025</span>
+                    <h2><a href="2025_03_24.html">Experimental Findings in Vision Language Model Training with VLM-R1</a></h2>
+                    <p>Key insights from our extensive experimentation with Reinforcement Learning for object detection in Vision Language Models, focusing on training methodologies, reward functions, and prompt engineering.</p>
+                    <a href="2025_03_24.html" class="read-more">Read more →</a>
+                </div>
+            </li>
+            <li>
                 <img src="images/coco_overall.v3.png" alt="COCO results" class="blog-image">
                 <div class="blog-content">
                     <span class="date">March 20, 2025</span>
