add github link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="images/OmAI-logo.v2.png" alt="OmAI Lab Logo" class="lab-logo">
             <div class="header-text">
                 <h1>VLM-R1 Blog</h1>
-                <p>Official blog for the VLM-R1 project - Solving Visual Understanding with Reinforced VLMs</p>
+                <p>Official blog for the <a href="https://github.com/om-ai-lab/VLM-R1">VLM-R1 project</a> - Solving Visual Understanding with Reinforced VLMs</p>
             </div>
         </div>
     </header>
