--- a/2025_03_24.html
+++ b/2025_03_24.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Experimental Findings in Vision Language Model Training with VLM-R1</title>
+    <title>Trials, Errors, and Breakthroughs: Our Rocky Road to OVD SOTA with Reinforcement Learning</title>
     <link rel="stylesheet" href="css/blog-styles.css">
 </head>
 <body>
@@ -12,13 +12,13 @@
     </nav>
     
     <header>
-        <h1>Experimental Findings in Vision Language Model Training with VLM-R1</h1>
+        <h1>Trials, Errors, and Breakthroughs: Our Rocky Road to OVD SOTA with Reinforcement Learning</h1>
         <p><em>Published on March 24, 2025</em></p>
     </header>
     
     <main>
         <h2>TL;DR</h2>
-        <p>This work presents comprehensive experimental findings on optimizing Vision Language Models (VLMs) for object detection through reinforcement learning, focusing on Qwen2.5-VL-3B and 7B models. Key findings include:</p>
+        <p>This blog presents comprehensive experimental findings on optimizing Vision Language Models (VLMs) for object detection through reinforcement learning, focusing on Qwen2.5-VL-3B and 7B models. Key findings include:</p>
 
         <ul>
             <li><strong>Reward Engineering Breakthroughs:</strong>
