--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="images/3b-accurancy.png" alt="3B vs 7B Model Comparison" class="blog-image">
                 <div class="blog-content">
                     <span class="date">March 24, 2025</span>
-                    <h2><a href="2025_03_24.html">Experimental Findings in Vision Language Model Training with VLM-R1</a></h2>
+                    <h2><a href="2025_03_24.html">Trials, Errors, and Breakthroughs: Our Rocky Road to OVD SOTA with Reinforcement Learning</a></h2>
                     <p>Key insights from our extensive experimentation with Reinforcement Learning for object detection in Vision Language Models, focusing on training methodologies, reward functions, and prompt engineering.</p>
                     <a href="2025_03_24.html" class="read-more">Read more →</a>
                 </div>
