--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VLM-R1 Blog</title>
+    <title>Om AI Lab Blogs</title>
     <link rel="stylesheet" href="css/index-styles.css">
 </head>
 <body>
